logging/otel/kubernetes/otel-demo/ingress-otelcol.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/proxy-read-timeout: 100s
    nginx.org/proxy-connect-timeout: 100s
    nginx.org/client-max-body-size: 550m
    nginx.ingress.kubernetes.io/proxy-body-size: 550m
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: my-otel-demo-otelcol
  namespace: otel-demo
spec:
  rules:
  - host: otel-collector-demo.essential-sandbox.com
    http:
      paths:
      - backend:
          service:
            name: my-otel-demo-otelcol
            port:
              number: 4318
        pathType: ImplementationSpecific
